--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "jquery": "^3.4.0",
+    "ngx-infinite-scroll": "^7.1.0",
     "rxjs": "~6.3.3",
     "time-ago-pipe": "^1.3.2",
     "tslib": "^1.9.0",
